# rag-core

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_qa.py  pdf_search.py
rag_core/: __init__.py  config.py  exceptions.py  models.py  pipeline.py
rag_core/chunkers/: __init__.py  base.py  fixed.py  recursive.py  semantic.py
rag_core/embeddings/: __init__.py  base.py  cache.py  local_embeddings.py  openai_embeddings.py
rag_core/loaders/: __init__.py  base.py  csv_loader.py  markdown.py  pdf.py  text.py
rag_core/prompts/: __init__.py  builder.py  templates.py
rag_core/retrieval/: __init__.py  ranker.py  retriever.py
rag_core/stores/: __init__.py  base.py  chroma.py  memory.py
tests/: __init__.py  test_chunkers.py  test_pipeline.py  test_stores.py
